ci: simulation of sending labels to the screen