@@ -2,6 +2,9 @@ package com.bridge.ipc;
 
 import static org.junit.jupiter.api.Assertions.fail;
 
+import com.bridge.core.exceptions.renderHandlerExceptions.RenderException;
+import com.bridge.processinputhandler.KeyboardEventManager;
+import com.bridge.processinputhandler.MouseEventManager;
 import com.bridge.renderHandler.render.Frame;
 import com.bridge.renderHandler.sound.Sound;
 import com.bridge.renderHandler.sprite.Coord;
@@ -18,6 +21,8 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.atomic.AtomicBoolean;
+
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
@@ -112,10 +117,37 @@ public class TransmitterTest {
 
     @Test
     void sendCompleteFrame() {
-        Coord position = new Coord(10, 20);
-        Size size = new Size(50.5, 75.5);
-        Sprite sprite = new Sprite(position, 0, size, Paths.get("sprite.jpg"));
-        Sound sound = new Sound(Paths.get("sound.wav"));
-        sendFrame(List.of(sprite), List.of(sound));
+        Path socketPath = Path.of("/tmp/socket_console");
+        SocketClient socketClient = new SocketClient(socketPath);
+        Transmitter transmitter = new Transmitter(socketClient);
+        try {
+            transmitter.sendLabel("fromfrontend", "red", 10, 50);
+        } catch (RenderException e) {
+            throw new RuntimeException(e);
+        }
+        try {
+            for (int i = 0; i < 500; i++) {
+                Coord position = new Coord(i, 10);
+                Size size = new Size(50.5, 75.5);
+                Sprite sprite = new Sprite(position, i,size, Paths.get("assets/images/pacman.jpeg"));
+                Sound sound = new Sound(Paths.get(""));
+                sound.setPlaying(false);
+                Frame frame = new Frame(List.of(sprite), List.of(sound));
+                transmitter.send(frame);
+                System.out.println("Frame " + (i + 1) + " enviado");
+
+                // Esperar 16 milisegundos para mantener 60 fps
+                Thread.sleep(10);
+            }
+        } catch (RenderException | InterruptedException e) {
+            e.printStackTrace();
+            System.err.println("Error al enviar el frame: " + e.getMessage());
+        }
+
+        try {
+            transmitter.sendLabel("from frontend two", "yellow", 10, 50);
+        } catch (RenderException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
